calendar/templates/default/app.css
/* $Id$ */

/*Media print classes*/
@media print{
	#calendar-view.et2_container, #calendar-planner.et2_container, #calendar-list.et2_container {
		position: static;
		height: auto !important;
	}
	#calendar-todo.et2_container {
		display: none !important;
	}
	.calendar_calDayTodos .calendar_calDayTodosTable {
		position: relative;
	}
	.calendar_plannerWidget
	{
		height: auto !important;
	}
	.calendar_plannerWidget .calendar_plannerHeader {
		margin-right: 2px !important;
	}
	.calendar_plannerWidget .calendar_plannerRows {
		height: auto !important;
		overflow: visible !important;
	}
	.calendar_plannerWidget .verticalBar {
		display: none;
	}
	/* Don't split a calendar week across pages */
	#calendar-view_view > tbody > tr.view_row {
		page-break-inside: avoid;
	}
	/* Try to keep it on the page */
	.calendar_calTimeGrid {
		max-height: 18cm;
		max-width: 90vw;
	}
	.calendar_calTimeGrid .calendar_calTimeGridScroll {
		overflow-y: hidden !important;
	}

	/* Let hidden user names be visible */
	#calendar-view_view.hideDayColHeader tr:not(:first-of-type) .calendar_calGridHeader > et2-description {
		position: static;
	}
	#calendar-view_view.hideDayColHeader tr:not(:first-of-type) .calendar_calGridHeader > et2-description {
		overflow: visible !important;
	}

	div.calendar_calEvent {
		opacity:1;
		filter:opacity(0.85);
		-webkit-filter:opacity(0.85);
		border: 1px solid;
	}
	/* Make times & all day description bold for better visibility */
	div.calendar_calDayColAllDay div.calendar_calEventBodySmall,
	div.calendar_calEventHeader, div.calendar_calEventHeaderSmall
	{
		font-weight: bold;
	}
}

/**
 * Sidebox
 */
#calendar-et2_target {
	position: relative;
}
#calendar-et2_target > div {
	position: relative;
}
#calendar-sidebox_cat_id {
	margin-bottom: 5px;
}
#calendar-sidebox_cat_id ~ * {
	vertical-align: top;
	display: inline-block;
    border: none;
    box-shadow: none;
}

#calendar-sidebox_weekend {
	/* Special css styling goes here */
}



#calendar-sidebox_date div.flatpickr-calendar.inline {
    width: 100% !important;
	box-shadow: none;
}

#calendar-sidebox_date .flatpickr-day {
    font-size: 11px;
}
#calendar-sidebox_date .inRange {
    background-color: var(--row_hover);
    box-shadow: none;
}

/* Conflict display */
div.calendar_conflicts {
	max-height: 540px;
	overflow-y: auto;
}
.calendar_conflicts img {
	width: 22px;
	height: 22px;
}
.calendar_conflicts table[id*="conflicting_participants"] > tbody > tr.r .et2_label {
    /* Color for resources */
    color: blue;
}

/* Loader - hide sizing behind overlay*/
#egw-loadin-prompt_calendar::before {
	opacity: 1;
    background-color: #e6e6e6;
}

/* Toolbar */
#calendar-toolbar {
	height: 3.6em;
	margin-top: 0.3em;
}
#calendar-toolbar > div {
	display: flex;
}
#calendar-toolbar .et2_toolbar {
	background: inherit;
}
#calendar-toolbar .egw_fw_ui_app_header_container {
	border: none;
	display:flex;
	align-items: center;
	min-height: 26px;
	justify-content: flex-end;
}

#calendar-toolbar .et2_searchbox input {
	height: 14px;
}
#calendar-toolbar #calendar-toolbar_favorite_wrapper {
	float: right;
	white-space: nowrap;
	margin-right: 5px;
	margin-top: -4px;
}
#calendar-toolbar #calendar-toolbar_favorite_wrapper #calendar-toolbar_favorite_menu {
	z-index: 40;
	font-weight: normal;
}
#calendar-toolbar .et2_dropdown button.ui-state-default {
	background: #ffffff;
}

/* Space for toolbar */
#calendar-view, #calendar-todo, #calendar-planner, #calendar-list {
	position: absolute;
	left: 0px;
	right: 0px;
}
form#calendar-toolbar > div {
	column-gap: 1ex;
}
#calendar-todo {
	position: absolute;
	width: 30%;
	margin-top: 0px;
	z-index: 10;
	bottom: -10px;
	height: calc(~"100% - 92px");
}

#calendar-view {
	width: 100%;
}
#calendar-view_view td {
	padding: 0px;
}

.calendar_inputFullWidth input { width: 100%; }
/* ... */

